// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`orElse > optimize #1 1`] = `
"import { match } from "@monstermann/match";
value === any ? any : transform(value);"
`;

exports[`orElse > optimize #2 1`] = `
"import { match } from "@monstermann/match";
value === any ? any : value;"
`;

exports[`orElse > optimize #3 1`] = `
"import { match } from "@monstermann/match";
value === any ? any : v;"
`;

exports[`orElse > optimize #4 1`] = `
"import { match } from "@monstermann/match";
value === any ? any : value ? 1 : 2;"
`;

exports[`orElse > optimize #5 1`] = `
"import { match } from "@monstermann/match";
value === any ? any : value.foo;"
`;

exports[`orElse > optimize #6 1`] = `
"import { match } from "@monstermann/match";
value === any ? any : transform(value);"
`;

exports[`orElse > optimize #7 1`] = `
"import { match } from "@monstermann/match";
value === any ? any : transform(value.foo);"
`;

exports[`orElse > optimize #8 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === any ? any : transform(_value))({
  foo: a,
  bar: b
});"
`;

exports[`orElse > optimize #9 1`] = `
"import { match } from "@monstermann/match";
({
  foo: a,
  bar: b
}) === any ? any : value;"
`;

exports[`orElse > optimize #10 1`] = `
"import { match } from "@monstermann/match";
({
  foo: a,
  bar: b
}) === any ? any : v;"
`;

exports[`orElse > optimize #11 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === any ? any : _value ? 1 : 2)({
  foo: a,
  bar: b
});"
`;

exports[`orElse > optimize #12 1`] = `
"import { match } from "@monstermann/match";
({
  foo: a,
  bar: b
}) === any ? any : a;"
`;

exports[`orElse > optimize #13 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === any ? any : transform(_value))({
  foo: a,
  bar: b
});"
`;

exports[`orElse > optimize #14 1`] = `
"import { match } from "@monstermann/match";
({
  foo: a,
  bar: b
}) === any ? any : transform(a);"
`;

exports[`orElse > optimize #15 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === any ? any : transform(_value))(getValue());"
`;

exports[`orElse > optimize #16 1`] = `
"import { match } from "@monstermann/match";
getValue() === any ? any : value;"
`;

exports[`orElse > optimize #17 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === any ? any : v)(getValue());"
`;

exports[`orElse > optimize #18 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === any ? any : _value ? 1 : 2)(getValue());"
`;

exports[`orElse > optimize #19 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === any ? any : _value.foo)(getValue());"
`;

exports[`orElse > optimize #20 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === any ? any : transform(_value))(getValue());"
`;

exports[`orElse > optimize #21 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === any ? any : transform(_value.foo))(getValue());"
`;
